Updated Flask app to prepare for deployment

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ sqlalchemy-serializer = "*"
 flask-restful = "*"
 flask-cors = "*"
 flask-bcrypt = "*"
+gunicorn = "*"
+psycopg2-binary = "*"
 
 [requires]
 python_full_version = "3.8.13"
